[package]
name = "tpw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { path = "../egui/eframe" } # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"], optional = true }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm
